# PyTorch-In-CPP

./: .gitignore  CppInNotebook.md  README.md  conanfile.txt
1_TorchScript/: README.md
1_TorchScript/example/1_LibTorch_Basic_Tensor/: CMakeLists.txt  README.md  build.sh  create_tensor.py  example-app.cpp  load-tensor.cpp
1_TorchScript/example/2_TorchScript_Convert/: CMakeLists.txt  README.md  benchmark.cpp  build.sh  convert_by_annotation.py  convert_by_tracing.py  example-app.cpp  tqdm.hpp
1_TorchScript/example/3_GRU_to_TorchScript/: CMakeLists.txt  README.md  benchmark.cpp  build.sh  convert_by_annotation.py  model.py
1_TorchScript/example/4_Batch_GRU_to_Single-Step_GRU/: CMakeLists.txt  README.md  benchmark.cpp  test_in_python.py
1_TorchScript/example/4_Batch_GRU_to_Single-Step_GRU/model/: __init__.py  batch_model.py  single_step_model.py
1_TorchScript/example/5_Try_Pure_Cpp_Model/: CMakeLists.txt  README.md  benchmark_from_single_header.cpp  model_header_with_logic.h  single_file.cpp
1_TorchScript/example/6_Load_StateDict_Json/: CMakeLists.txt  Makefile  README.md  build.sh  load_json_to_torch_tensor.cpp
1_TorchScript/example/6_Load_StateDict_Json/include/: weights_loader.h
2_VanillaMKL/: README.md
2_VanillaMKL/example/1_PureJson/: CMakeLists.txt  Makefile  README.md  create_json.cpp
2_VanillaMKL/example/2_MKL_Basic_Vector_Add/: README.md  sample.json
2_VanillaMKL/example/2_MKL_Basic_Vector_Add/src/: CMakeLists.txt  vector-add-buffers.cpp  vector-add-usm.cpp
2_VanillaMKL/example/3_Try_Pure_Cpp_Model/: README.md
2_VanillaMKL/example/3_Try_Pure_Cpp_Model/src/: CMakeLists.txt  SingleStepLSTMRegressionMKL.cpp  SingleStepLSTMRegressionMKL.h  main.cpp
2_VanillaMKL/example/4_Load_StateDict_Json/: Makefile  README.md  load_json_only.cpp  model.py
2_VanillaMKL/example/5_Load_StateDict_For_Model/: CMakeLists.txt  README.md  build.sh  build_and_run.sh  gdb_wrapper.sh  model.py  python_debug.py  python_debug_2.py  python_load.py
2_VanillaMKL/example/5_Load_StateDict_For_Model/include/: SingleStepLSTMRegressionMKL.h  weights_loader.h
2_VanillaMKL/example/5_Load_StateDict_For_Model/src/: CMakeLists.txt  SingleStepLSTMRegressionMKL.cpp  main.cpp  weights_loader.cpp
2_VanillaMKL/example/6_Debug_Equivalent_Ops/: CMakeLists.txt  README.md  build.sh  main.cpp
3_XTensor/: README.md
3_XTensor/example/1_Equivalent_Ops/: EquivalentOps.ipynb
docker/: run_xeus-cling_docker.sh  xcpp.ipynb  xeus-cling-jupyterlab.dockerfile  xeus-cling.dockerfile
others/call_c_in_python/: README.md  division.c  test.py
others/glog/: Makefile  README.md
others/glog/cmake/: CMakeLists.txt  README.md  main.cpp
others/glog_gflags/: CMakeLists.txt  Makefile  README.md  main.cpp
